tests/ui/typech/trait_signature_mismatch_constraint.lm
trait Default { }

trait Foo {
    fn foo<T: Default>();
}

use Foo: Int32 {
    fn foo<T>() { }
}
